--- a/S2_Prompts/prompts.ipynb
+++ b/S2_Prompts/prompts.ipynb
@@ -280,20 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image Prompt ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'http://yourdomain.com/{imageName}', 'detail': 'low'})\n",
-      "Prompt Value ImagePromptValue(image_url={'detail': 'low', 'url': 'http://yourdomain.com/good_pic.jpeg'})\n",
-      "ImageURL object {'detail': 'low', 'url': 'http://yourdomain.com/good_pic.jpeg'}\n",
-      "Human Message1 HumanMessagePromptTemplate(prompt=[ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'http://yourdomain.com/{imageName}', 'detail': 'low'})], additional_kwargs={})\n",
+      "Image Prompt ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5{imageName}', 'detail': 'low'})\n",
+      "Prompt Value ImagePromptValue(image_url={'detail': 'low', 'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5good_pic.jpeg'})\n",
+      "ImageURL object {'detail': 'low', 'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5good_pic.jpeg'}\n",
+      "Human Message1 HumanMessagePromptTemplate(prompt=[ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5{imageName}', 'detail': 'low'})], additional_kwargs={})\n",
       "Human Message2 HumanMessage(content='Describe this image in brief', additional_kwargs={}, response_metadata={})\n",
-      "Chat prompt:  ChatPromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, messages=[HumanMessagePromptTemplate(prompt=[ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'http://yourdomain.com/{imageName}', 'detail': 'low'})], additional_kwargs={}), HumanMessage(content='Describe this image in brief', additional_kwargs={}, response_metadata={})])\n",
-      "Prompt Value:  ChatPromptValue(messages=[HumanMessage(content=[{'type': 'image_url', 'image_url': {'url': 'http://yourdomain.com/my_pic.png', 'detail': 'low'}}], additional_kwargs={}, response_metadata={}), HumanMessage(content='Describe this image in brief', additional_kwargs={}, response_metadata={})])\n"
+      "Chat prompt:  ChatPromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, messages=[HumanMessagePromptTemplate(prompt=[ImagePromptTemplate(input_variables=['imageName'], input_types={}, partial_variables={}, template={'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5{imageName}', 'detail': 'low'})], additional_kwargs={}), HumanMessage(content='Describe this image in brief', additional_kwargs={}, response_metadata={})])\n",
+      "Prompt Value:  ChatPromptValue(messages=[HumanMessage(content=[{'type': 'image_url', 'image_url': {'url': 'https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5my_pic.png', 'detail': 'low'}}], additional_kwargs={}, response_metadata={}), HumanMessage(content='Describe this image in brief', additional_kwargs={}, response_metadata={})])\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
     "\n",
     "\n",
     "# Lets create the Image Prompt Template\n",
-    "imagePrompt = ImagePromptTemplate(input_variables=[\"imageName\"], template={\"url\":\"http://yourdomain.com/{imageName}\", \"detail\":\"low\"})\n",
+    "imagePrompt = ImagePromptTemplate(input_variables=[\"imageName\"], template={\"url\":\"https://photos.google.com/photo/AF1QipNg-PqNKkpmBfiZc7kRtPJgOJhnpR3u56B9_gW5{imageName}\", \"detail\":\"low\"})\n",
     "\n",
     "# Just to check we are doing this right - lets invoke and see if the variables are replaced\n",
     "promptValue = imagePrompt.invoke(input={\"imageName\":\"good_pic.jpeg\"})\n",
@@ -330,6 +330,7 @@
     "# And invoke will substitute the values and prepare the prompt to be sent to model\n",
     "promptValue = chatPrompt.invoke(input={\"imageName\":\"my_pic.png\"})\n",
     "print('Prompt Value: ',promptValue.__repr__())\n",
+    "\n",
     "\n",
     "# model.invoke(promptValue) Try when you have an image.\n",
     "\n",
